# apps/via/via/Shared/Networking/OpenAPI/openapi.json
@@ -1307,6 +1307,91 @@
                                     ]
                                   },
                                   "default": []
+                                },
+                                "boardingPosition": {
+                                  "type": "object",
+                                  "properties": {
+                                    "car": {
+                                      "type": "integer",
+                                      "minimum": 1,
+                                      "maximum": 9007199254740991
+                                    },
+                                    "carCount": {
+                                      "type": "integer",
+                                      "minimum": 1,
+                                      "maximum": 9007199254740991
+                                    },
+                                    "zone": {
+                                      "enum": [
+                                        "front",
+                                        "middle",
+                                        "rear"
+                                      ],
+                                      "type": "string"
+                                    },
+                                    "reason": {
+                                      "enum": [
+                                        "exit",
+                                        "transfer"
+                                      ],
+                                      "type": "string"
+                                    },
+                                    "equipment": {
+                                      "enum": [
+                                        "escalator",
+                                        "lift",
+                                        "stairs"
+                                      ],
+                                      "type": "string"
+                                    }
+                                  },
+                                  "required": [
+                                    "car",
+                                    "carCount",
+                                    "zone",
+                                    "reason"
+                                  ]
+                                },
+                                "exit": {
+                                  "type": "object",
+                                  "properties": {
+                                    "id": {
+                                      "type": "string"
+                                    },
+                                    "name": {
+                                      "type": "string"
+                                    },
+                                    "number": {
+                                      "type": "integer",
+                                      "minimum": -9007199254740991,
+                                      "maximum": 9007199254740991
+                                    },
+                                    "coordinate": {
+                                      "type": "object",
+                                      "properties": {
+                                        "latitude": {
+                                          "type": "number"
+                                        },
+                                        "longitude": {
+                                          "type": "number"
+                                        }
+                                      },
+                                      "required": [
+                                        "latitude",
+                                        "longitude"
+                                      ]
+                                    },
+                                    "walkingMeters": {
+                                      "type": "integer",
+                                      "minimum": 0,
+                                      "maximum": 9007199254740991
+                                    }
+                                  },
+                                  "required": [
+                                    "id",
+                                    "name",
+                                    "coordinate"
+                                  ]
                                 }
                               },
                               "required": [
@@ -2130,6 +2215,91 @@
                                             ]
                                           },
                                           "default": []
+                                        },
+                                        "boardingPosition": {
+                                          "type": "object",
+                                          "properties": {
+                                            "car": {
+                                              "type": "integer",
+                                              "minimum": 1,
+                                              "maximum": 9007199254740991
+                                            },
+                                            "carCount": {
+                                              "type": "integer",
+                                              "minimum": 1,
+                                              "maximum": 9007199254740991
+                                            },
+                                            "zone": {
+                                              "enum": [
+                                                "front",
+                                                "middle",
+                                                "rear"
+                                              ],
+                                              "type": "string"
+                                            },
+                                            "reason": {
+                                              "enum": [
+                                                "exit",
+                                                "transfer"
+                                              ],
+                                              "type": "string"
+                                            },
+                                            "equipment": {
+                                              "enum": [
+                                                "escalator",
+                                                "lift",
+                                                "stairs"
+                                              ],
+                                              "type": "string"
+                                            }
+                                          },
+                                          "required": [
+                                            "car",
+                                            "carCount",
+                                            "zone",
+                                            "reason"
+                                          ]
+                                        },
+                                        "exit": {
+                                          "type": "object",
+                                          "properties": {
+                                            "id": {
+                                              "type": "string"
+                                            },
+                                            "name": {
+                                              "type": "string"
+                                            },
+                                            "number": {
+                                              "type": "integer",
+                                              "minimum": -9007199254740991,
+                                              "maximum": 9007199254740991
+                                            },
+                                            "coordinate": {
+                                              "type": "object",
+                                              "properties": {
+                                                "latitude": {
+                                                  "type": "number"
+                                                },
+                                                "longitude": {
+                                                  "type": "number"
+                                                }
+                                              },
+                                              "required": [
+                                                "latitude",
+                                                "longitude"
+                                              ]
+                                            },
+                                            "walkingMeters": {
+                                              "type": "integer",
+                                              "minimum": 0,
+                                              "maximum": 9007199254740991
+                                            }
+                                          },
+                                          "required": [
+                                            "id",
+                                            "name",
+                                            "coordinate"
+                                          ]
                                         }
                                       },
                                       "required": [
